Closed
Bug 255927
Opened 21 years ago
Closed 21 years ago
When handling a fault in nsIWebServiceCallContext it crashes
Categories
(Core Graveyard :: Web Services, defect)
Core Graveyard
Web Services
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: chantepie, Assigned: chantepie)
Details
(Keywords: crash)
Attachments
(2 files, 2 obsolete files)
|
1.43 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.45 KB,
patch
|
mkaply
:
approval1.7.5+
|
Details | Diff | Splinter Review |
When an SOAPFault is handled as nsIException in wspcallcontext.cpp it crashes
when mListener->OnError is called throught xptc
| Assignee | ||
Comment 1•21 years ago
|
||
Thanks a lot to scc and timeless for this patch
| Assignee | ||
Comment 2•21 years ago
|
||
Thanx to scc and timeless for their help about that crash
Attachment #156372 -
Flags: superreview?(shaver)
Attachment #156372 -
Flags: review+
Comment on attachment 156372 [details] [diff] [review]
Patch for trunk
+ nsCOMPtr<nsISupports> canonical_this =
+ do_QueryInterface(NS_STATIC_CAST(nsIWebServiceCallContext*, this));
Why do you need the STATIC_CAST here? Can't you just do_QueryInterface(this)?
Move it down to where you set [1].val.p, too.
+ dispatchParams[0].val.p = mException;
Maybe it's not necessary, but I'd prefer mException.get().
Comment on attachment 156372 [details] [diff] [review]
Patch for trunk
timeless explained why the STATIC_CAST is necessary. Fix the rest.
Attachment #156372 -
Flags: superreview?(shaver) → superreview+
Don't forget that if you want this on Aviary you'll also need to get it into 1.7.
| Assignee | ||
Comment 6•21 years ago
|
||
(In reply to comment #5)
> Don't forget that if you want this on Aviary you'll also need to get it into 1.7.
Do I need to do something special for 1.7 ? aviary patch should apply on that ...
| Assignee | ||
Comment 7•21 years ago
|
||
Change '= mException' to '= mException.get()'
| Assignee | ||
Comment 8•21 years ago
|
||
Comment on attachment 156372 [details] [diff] [review]
Patch for trunk
mozilla/extensions/webservices/proxy/src/wspcallcontext.cpp 1.13
Attachment #156372 -
Attachment is obsolete: true
Attachment #156374 -
Attachment is obsolete: true
Attachment #156488 -
Flags: approval1.7.3?
Comment 10•21 years ago
|
||
Comment on attachment 156488 [details] [diff] [review]
Fixed patch for aviary
a=mkaply for 1.7
Attachment #156488 -
Flags: approval1.7.3? → approval1.7.3-
| Assignee | ||
Comment 11•21 years ago
|
||
(In reply to comment #10)
> (From update of attachment 156488 [details] [diff] [review])
> a=mkaply for 1.7
>
Patch doesn't work ? what should be done ? ...
Comment 12•21 years ago
|
||
Comment on attachment 156488 [details] [diff] [review]
Fixed patch for aviary
weird.
Attachment #156488 -
Flags: approval1.7.3- → approval1.7.3+
| Assignee | ||
Updated•21 years ago
|
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•