Bug 255927 When handling a fault in nsIWebServiceCallContext it crashes patch by chantepie@altern.org thanks to scc r=timeless sr=roc